2006-02-14  Sergey Poznyakoff  <gray@gnu.org.ua>

	* util/texi2dvi: New options --translate-file and --recode-from.

2006-02-13  Karl Berry  <karl@gnu.org>

	* makeinfo/cmds.c (cm_enddots): output three dots, not four, for
	consistency with texinfo.tex.

	* doc/texinfo.tex (\doignore): move \obeylines here.
	(\dodoignore): from here.  (just putting catcode changes together.)
	(\doignoretextyyy): revert to previous code, no ##2^^M;
	that caused blank lines in verbatim envs inside failing conditionals.
	(\enddoignore): ignore any text after the @end #1 here, instead.
	Bug report from Bob Wilson, 5 Oct 2005 21:22:33 -0700,
	amended fix from Stepan, 13 Feb 2006 21:57:07 +0100.

	* info/nodes.c (info_get_node): don't try man Top and man top and
	man TOP.  Debian bug 234848.

2006-02-11  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (write_trailer): new fn.
	(convert_from_loaded_file) <finished>: call it *after* the
	tag table has been written, else Emacs likely won't seeit.
	Report from: Juri Linkov, 11 Feb 2006 03:11:33 +0200.

2006-02-10  Karl Berry  <karl@gnu.org>

	* util/texinfo.dtd (menucomment): more inclusive.
	(enumerate): allow indexes.
	From Torsten.

2006-02-06  Karl Berry  <karl@gnu.org>

	* util/texinfo.dtd: apparently we cannot have -- in an XML
	comment.  Kludge.

2006-02-05  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (run_makeinfo): eval $makeinfo, for gettext
	0.14.5's complex $MAKEINFO definition.

2006-01-30  Karl Berry  <karl@gnu.org>

	* util/texinfo.dtd: many additions and fixes from
	Torsten Bronger.

2006-01-27  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\sectionheading): \nobreak before the \vbox
	with the heading.
	Report from: Norbert Preining, 2 Nov 2005 10:07:57 +0100,
	Debian bug 276000.

2006-01-25  Karl Berry  <karl@gnu.org>

	* makeinfo/lang.c (cm_accent_generic_no_headers): do nothing
	if end == 0 (accent command in @menu with --no-headers).
	Report from Akim Demaille, 23 Jan 2006 16:41:38 +0100.
